# blackbox

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Pipfile  README.md  black_box.py  blackbox.example.yaml  config.yaml  docker-compose.yaml  example_custom_filename.yaml  main.py  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: build_and_push.yaml  docker_smoke.yaml  lint.yaml  publish.yaml  publish_test.yaml  security.yaml  tests.yaml
blackbox/: __init__.py  __main__.py  abc.py  cli.py  config.py  exceptions.py  mixins.py  workflows.py
blackbox/handlers/: __init__.py  _base.py
blackbox/handlers/databases/: __init__.py  _base.py  localstorage.py  mariadb.py  mongodb.py  mysql.py  postgres.py  redis.py  zip.py
blackbox/handlers/notifiers/: __init__.py  _base.py  discord.py  json.py  slack.py  telegram.py
blackbox/handlers/storage/: __init__.py  _base.py  dropbox.py  google_drive.py  s3.py
blackbox/utils/: __init__.py  commands.py  cooldown.py  encryption.py  frequency.py  logger.py  mixins.py  reports.py  rotation.py  version.py  workflows.py  yaml.py
config/: __init__.py  config.py
databases/: __init__.py  _base.py  mongodb.py  postgres.py  redis.py
docker/: Dockerfile  entrypoint.sh
docker/mongo/: mongo_import.sh
docker/mongo/init_data/admin/: system.version.bson  system.version.metadata.json
docker/mongo/init_data/pydis_forms/: admins.bson  admins.metadata.json  forms.bson  forms.metadata.json  responses.bson  responses.metadata.json
docker/redis/: Dockerfile  data.redis  insert-data.sh  start-redis.sh
notifiers/: __init__.py  _base.py  discord.py
storage/: __init__.py  _base.py  google_drive.py
tests/: conftest.py  fixtures.py  test_cli.py  test_cli_exit_codes.py  test_config.py  test_cooldown.py  test_cron.py  test_databases.py  test_discord.py  test_docker_version_tags.py  test_dropbox.py  test_encryption.py  test_exception_chaining.py  test_filename_format.py  test_google_drive.py  test_json.py  test_mongodb.py  test_notifier_base.py  test_password_validation.py  test_postgres.py  test_redis.py  test_s3.py  test_slack.py  test_storage.py  test_telegram.py
utils/: __init__.py  commands.py  yaml.py
