[tool.poetry]
name = "blackbox-cli"
packages = [
    { include = "blackbox" }
]
version = "2.1.0"
description = "Tool for automatic backups of databases"
authors = ["Leon Sandøy <leon.sandoy@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lemonsaurus/blackbox"
repository = "https://github.com/lemonsaurus/blackbox"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database",
    "Topic :: System :: Archiving :: Backup"
]
exclude = ["tests", "tests.*"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^5.3.1"
requests = "^2.25.1"
boto3 = "^1.16.51"
loguru = "^0.5.3"
jinja2 = "^2.11.2"
click = "^7.1.2"
dropbox = "^11.0.0"
pytelegrambotapi = "^3.7.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
flake8 = "^3.9.0"
flake8-isort = "^4.0.0"
pytest-subprocess = "^1.0.1"
requests-mock = "^1.8.0"
win32-setctime = "^1.0.3"
poethepoet = "^0.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blackbox = "blackbox.cli:cli"

[tool.poe.tasks]
test = "pytest --cov blackbox -vv --cov-report=term-missing ."
lint = "flake8 ."
isort = "isort ."
html = "pytest --cov blackbox --cov-report=html ."